--- a/gpgadmin-front-end/app/index.html
+++ b/gpgadmin-front-end/app/index.html
@@ -37,12 +37,13 @@
             <a class="navbar-brand" href="#/">GPG Admin</a>
           </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+          <div ng-controller="MainCtrl" class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li ng-class="{active:$route.current.activetab == 'home'}"><a href="#/">Home</a></li>
+              <li ng-class="{active:$route.current.activetab == 'about'}"><a ng-href="#/about">About</a></li>
+              <li ng-class="{active:$route.current.activetab == 'contact'}"><a ng-href="#/contact">Contact</a></li>
+	      <li ng-class="{active:$route.current.activetab == 'help'}"><a ng-href="#/help">Help</a></li>
             </ul>
           </div>
         </div>
@@ -92,6 +93,9 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/keyupload.js"></script>
+        <script src="scripts/controllers/switchtohelpview.js"></script>
+        <script src="scripts/controllers/help.js"></script>
+        <script src="scripts/controllers/contact.js"></script>
         <!-- endbuild -->
 </body>
 </html>
